# LLM-GitRebase

./: .gitignore  pyproject.toml
src/: filesystem_server.py  git_mcp_server.py  rebase_mcp_server.py  server.py
src/git_mcp_server/: server.py
src/rebaser/: .env  __main__.py  agent.py  clean_schema.py  client.py  create_agent.py  get_commits.py  instruction.txt  llm.py  main.py  mcp_client.py  model.py  prompt.txt  rebase.py  rebase_manager.py  rebase_mcp_server.py
src/rebaser/prompts/: initial_query.txt  instruction.txt
